fixed bugs in div

--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
 
 	<div id="results">Your captured image will appear here...</div>
 
-	<div width="200", height="300", border="10px solid blueviolet", id="emotionResult">
-
-	</div>
+	<div width="200" height="300" style="border: 1px solid blueviolet" id="emotionResult"></div>
 	
 	<!-- First, include the Webcam.js JavaScript Library -->
 	<script type="text/javascript" src="./webcam.min.js"></script>
@@ -73,7 +71,7 @@
 			}
             // var r = new FileReader();
             // f = document.getElementById('testImg').files[0];
-            console.log(123123);
+
             // console.log(document.getElementById('testImg').files);ssssss
             // r.readAsDataURL(f);
             // r.onload = function(e) {
