--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 			width: 400,
 			height: 300,
 			image_format: 'jpeg',
-			jpeg_quality: 90
+			jpeg_quality: 90,
+            force_flash: true
 		});
 		Webcam.attach( '#my_camera' );
 	</script>
