--- a/index.html
+++ b/index.html
@@ -175,7 +175,8 @@
 				{
 					for (var item in emotionArr[key])
 					{
-						str += '<span>' + item + ':' + emotionArr[key][item] + '</span><br />';
+						// str += '<span>' + item + ':' + emotionArr[key][item] + '</span><br />';
+                        alert(item + ":" + emotionArr[key][item]);
 					}
 					
 				}
