disabled force_flush

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			height: 300,
 			image_format: 'jpeg',
 			jpeg_quality: 90,
-            force_flash: true
+            force_flash: false
 		});
 		Webcam.attach( '#my_camera' );
 	</script>
